--- a/BibleBeatMe/Views/Base.lproj/LaunchScreen.storyboard
+++ b/BibleBeatMe/Views/Base.lproj/LaunchScreen.storyboard
@@ -24,8 +24,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BB" translatesAutoresizingMaskIntoConstraints="NO" id="tSr-UC-092">
+                                <rect key="frame" x="25" y="44" width="324" height="219"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="324" id="CIP-Uf-8Aj"/>
+                                    <constraint firstAttribute="height" constant="219" id="VPw-vs-W9U"/>
+                                </constraints>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bible Beat Me" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="ko5-bc-o2C">
-                                <rect key="frame" x="19" y="251" width="337.5" height="185"/>
+                                <rect key="frame" x="19" y="288" width="337.5" height="185"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="155"/>
                                 <color key="textColor" red="1" green="0.0" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -33,9 +40,11 @@
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="ko5-bc-o2C" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="10" id="4Dl-EV-gZJ"/>
+                            <constraint firstItem="tSr-UC-092" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="24" id="7JU-6O-n2W"/>
                             <constraint firstItem="ko5-bc-o2C" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="0.9" id="Tf3-lY-4bq"/>
+                            <constraint firstItem="tSr-UC-092" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="ogF-PP-Puf"/>
                             <constraint firstItem="ko5-bc-o2C" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="rmZ-pb-C4J"/>
+                            <constraint firstItem="ko5-bc-o2C" firstAttribute="top" secondItem="tSr-UC-092" secondAttribute="bottom" constant="25" id="zNw-Sg-fId"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -45,4 +54,7 @@
             <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="BB" width="448" height="372"/>
+    </resources>
 </document>
