--- a/BibleBeatMe/Views/Base.lproj/Main.storyboard
+++ b/BibleBeatMe/Views/Base.lproj/Main.storyboard
@@ -7,7 +7,6 @@
         <deployment version="2352" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -16,6 +15,7 @@
     <customFonts key="customFonts">
         <array key="HelveticaNeue.ttc">
             <string>HelveticaNeue</string>
+            <string>HelveticaNeue-Bold</string>
             <string>HelveticaNeue-Medium</string>
         </array>
         <array key="HelveticaNeueLights.ttc">
@@ -76,10 +76,9 @@
                                         </constraints>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x7o-un-21D">
-                                        <rect key="frame" x="52.333333333333343" y="143.33333333333334" width="308.33333333333326" height="57"/>
+                                        <rect key="frame" x="62.333333333333343" y="143.33333333333334" width="288.33333333333326" height="57"/>
                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="226" id="VFi-oE-KF3"/>
                                             <constraint firstAttribute="height" constant="57" id="ieb-sE-Z02"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="21"/>
@@ -99,11 +98,10 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FbB-ci-sIY">
-                                        <rect key="frame" x="52.333333333333343" y="240.33333333333331" width="308.33333333333326" height="57"/>
+                                        <rect key="frame" x="62.333333333333343" y="240.33333333333331" width="288.33333333333326" height="57"/>
                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="57" id="4di-t5-Sfq"/>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="226" id="ZyL-TU-fsR"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="21"/>
                                         <state key="normal" title="Competition">
@@ -122,10 +120,9 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kzE-tw-X01">
-                                        <rect key="frame" x="52.333333333333343" y="337.33333333333331" width="308.33333333333326" height="57"/>
+                                        <rect key="frame" x="62.333333333333343" y="337.33333333333331" width="288.33333333333326" height="57"/>
                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="226" id="ONJ-d6-Qin"/>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="57" id="TjF-wJ-3je"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="21"/>
@@ -144,20 +141,33 @@
                                             <segue destination="YqF-7u-i7S" kind="presentation" id="2rw-3h-lbq"/>
                                         </connections>
                                     </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="9" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="njE-Cy-GjM">
+                                        <rect key="frame" x="326" y="218.33333333333331" width="40" height="40"/>
+                                        <color key="backgroundColor" red="1" green="0.0" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="CTV-hq-32v"/>
+                                            <constraint firstAttribute="height" constant="40" id="Ofo-Tf-bXg"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <constraints>
-                                    <constraint firstItem="FbB-ci-sIY" firstAttribute="width" secondItem="6Jy-lY-7cU" secondAttribute="height" multiplier="0.4" constant="40" id="0tH-Kf-tz7"/>
-                                    <constraint firstItem="kzE-tw-X01" firstAttribute="width" secondItem="6Jy-lY-7cU" secondAttribute="height" multiplier="0.4" constant="40" id="EAB-oF-K9L"/>
+                                    <constraint firstItem="FbB-ci-sIY" firstAttribute="width" secondItem="6Jy-lY-7cU" secondAttribute="width" multiplier="0.6" constant="40" id="0tH-Kf-tz7"/>
+                                    <constraint firstItem="kzE-tw-X01" firstAttribute="width" secondItem="6Jy-lY-7cU" secondAttribute="width" multiplier="0.6" constant="40" id="EAB-oF-K9L"/>
                                     <constraint firstItem="FbB-ci-sIY" firstAttribute="top" secondItem="x7o-un-21D" secondAttribute="bottom" constant="40" id="FgE-hc-Uox"/>
                                     <constraint firstItem="kzE-tw-X01" firstAttribute="centerX" secondItem="6Jy-lY-7cU" secondAttribute="centerX" id="Hdb-Xc-XIL"/>
+                                    <constraint firstItem="njE-Cy-GjM" firstAttribute="leading" secondItem="FbB-ci-sIY" secondAttribute="trailing" constant="-24.666666666666629" id="JBo-oy-map"/>
                                     <constraint firstItem="FbB-ci-sIY" firstAttribute="centerY" secondItem="6Jy-lY-7cU" secondAttribute="centerY" multiplier="0.8" id="Kn3-dJ-Kb8"/>
-                                    <constraint firstItem="x7o-un-21D" firstAttribute="width" secondItem="6Jy-lY-7cU" secondAttribute="height" multiplier="0.4" constant="40" id="NAu-UK-d44"/>
+                                    <constraint firstItem="x7o-un-21D" firstAttribute="width" secondItem="6Jy-lY-7cU" secondAttribute="width" multiplier="0.6" constant="40" id="NAu-UK-d44"/>
                                     <constraint firstItem="FbB-ci-sIY" firstAttribute="centerX" secondItem="6Jy-lY-7cU" secondAttribute="centerX" id="XWR-Ze-mBT"/>
+                                    <constraint firstItem="FbB-ci-sIY" firstAttribute="top" secondItem="njE-Cy-GjM" secondAttribute="bottom" constant="-18" id="YU5-an-FQk"/>
                                     <constraint firstItem="kzE-tw-X01" firstAttribute="top" secondItem="FbB-ci-sIY" secondAttribute="bottom" constant="40" id="bIT-am-qM9"/>
                                     <constraint firstItem="Hj1-YC-yLw" firstAttribute="top" secondItem="6Jy-lY-7cU" secondAttribute="top" constant="17" id="cjF-de-6f4"/>
                                     <constraint firstItem="x7o-un-21D" firstAttribute="centerX" secondItem="6Jy-lY-7cU" secondAttribute="centerX" id="iOJ-7h-KEh"/>
                                     <constraint firstItem="Hj1-YC-yLw" firstAttribute="centerX" secondItem="6Jy-lY-7cU" secondAttribute="centerX" id="n9D-fD-0cj"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="njE-Cy-GjM" secondAttribute="trailing" constant="20" symbolic="YES" id="ode-SL-BjG"/>
                                     <constraint firstItem="x7o-un-21D" firstAttribute="top" secondItem="Hj1-YC-yLw" secondAttribute="bottom" id="ubq-Ik-Lbb"/>
                                     <constraint firstItem="Hj1-YC-yLw" firstAttribute="leading" secondItem="6Jy-lY-7cU" secondAttribute="leading" id="vbr-lr-Cj0"/>
                                 </constraints>
@@ -188,6 +198,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="mainView" destination="6Jy-lY-7cU" id="Lzq-7g-Ypr"/>
+                        <outlet property="opponentsInvitations" destination="njE-Cy-GjM" id="Opi-3F-9PJ"/>
                         <outlet property="titleApp" destination="2bP-1Y-fVh" id="W4w-rW-ud8"/>
                         <outletCollection property="specialButtons" destination="kzE-tw-X01" collectionClass="NSMutableArray" id="VtO-r5-pyZ"/>
                         <outletCollection property="specialButtons" destination="FbB-ci-sIY" collectionClass="NSMutableArray" id="T9Z-fW-qUU"/>
@@ -255,7 +266,7 @@
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Who" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eSr-3B-GPb">
                                                 <rect key="frame" x="286.66666666666669" y="0.0" width="31" height="17.666666666666668"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="31" id="64t-lF-Auv"/>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="31" id="64t-lF-Auv"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                                 <color key="textColor" red="1" green="0.0" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -283,6 +294,7 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Hyh-JF-cXo">
                                 <rect key="frame" x="0.0" y="139" width="414" height="466"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="separatorColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="gray" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="scoreCell" id="6UA-mC-RFj" customClass="ScoreCell" customModule="BibleBeatMe" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="44"/>
@@ -465,7 +477,7 @@
                                             </constraints>
                                         </view>
                                         <prototypes>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="gray" accessoryType="disclosureIndicator" indentationWidth="10" shouldIndentWhileEditing="NO" reuseIdentifier="opponentCell" rowHeight="70" id="Bo9-Dv-cjr" customClass="OpponentCell" customModule="BibleBeatMe" customModuleProvider="target">
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" shouldIndentWhileEditing="NO" reuseIdentifier="opponentCell" rowHeight="70" id="Bo9-Dv-cjr" customClass="OpponentCell" customModule="BibleBeatMe" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="95" width="414" height="70"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Bo9-Dv-cjr" id="nqM-kF-pcR">
@@ -1265,6 +1277,7 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hMx-qX-daa">
                                 <rect key="frame" x="0.0" y="119" width="414" height="553"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="separatorColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="0.0" reuseIdentifier="challengeCell" rowHeight="60" id="hAg-6o-XJA" customClass="ChallengeCell" customModule="BibleBeatMe" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="60"/>
