Add models: Question, Challenge, User, PracticeCompetition

--- a/BibleBeatMe/Views/Base.lproj/LaunchScreen.storyboard
+++ b/BibleBeatMe/Views/Base.lproj/LaunchScreen.storyboard
@@ -24,7 +24,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BB" translatesAutoresizingMaskIntoConstraints="NO" id="tSr-UC-092">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BBM" translatesAutoresizingMaskIntoConstraints="NO" id="tSr-UC-092">
                                 <rect key="frame" x="25" y="44" width="324" height="219"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="324" id="CIP-Uf-8Aj"/>
@@ -55,6 +55,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="BB" width="448" height="372"/>
+        <image name="BBM" width="512" height="512"/>
     </resources>
 </document>
